--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,42 +10,41 @@
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/estilos.css">
 </head>
+
 <body>
 
-    <header class="hero">
-        <nav class="nav container">
-          <div class="nav__logo">
-            <h2 class="nav__title"> MTHW </h2>
-          </div>
+  <header class="hero">
+    <nav class="nav container">
+      <div class="nav__logo">
+        <img src="./images/favicon.png" alt="MTHW Logo" class="snav__logo-img">
+      </div>
 
-          <ul class="nav__link nav__link--menu">
-            <li class="nav__items">
-                <a href="#" class="nav__links">Inicio</a>
-            </li>
-            <li class="nav__items">
-                <a href="#" class="nav__links">Acerca de</a>
-            </li>
-            <li class="nav__items">
-                <a href="#" class="nav__links">Contacto</a>
-            </li>
-            <li class="nav__items">
-                <a href="#" class="nav__links">Blog</a>
-            </li>
+      <ul class="nav__link nav__link--menu">
+        <li class="nav__items">
+          <a href="#" class="nav__links">Inicio</a>
+        </li>
+        <li class="nav__items">
+          <a href="#" class="nav__links">Acerca de</a>
+        </li>
+        <li class="nav__items">
+          <a href="#" class="nav__links">Contacto</a>
+        </li>
+        <img src="./images/close.svg" class="nav__close">
+      </ul>
 
-            <img src="./images/close.svg" class="nav__close">
-        </ul>
+      <div class="nav__menu">
+        <img src="./images/menu.svg" class="nav__img">
+      </div>
+    </nav>
 
-          <div class="nav__menu">
-              <img src="./images/menu.svg" class="nav__img">
-          </div>
-        </nav>
-
-        <section class="hero__container container"> 
-            <h1 class="hero__title">El estilo se lleva en la piel, y en MTHW.</h1>
-            <p class="hero__paragraph">Cada pieza de MTHW está pensada para destacar lo mejor de vos. Calidad, estilo y diseño hechos en Argentina.</p>
-            <a href="#" class="cta">Descubrí nuestra colección</a>
-       </section>
-     </header>
+    <section class="hero__container container">
+      <h1 class="hero__title">El estilo se lleva en la piel y en MTHW.</h1>
+      <p class="hero__paragraph">Cada pieza de MTHW está pensada para destacar lo mejor de vos. Calidad, estilo y diseño
+        hechos para la ciudad.</p>
+      <a href="#" class="cta">Descubrí nuestra colección</a>
+    </section>
+  </header>
 
 </body>
+
 </html>
